k8s/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: token-info-db
spec:
  replicas: 1
  selector:
    matchLabels:
      appkey: token-info-db
  template:
    metadata:
      labels:
        appkey: token-info-db
    spec:
      containers:
        - env:
            - name: MYSQL_DATABASE
              value: tesing123
            - name: MYSQL_PASSWORD
              value: password
            - name: MYSQL_ROOT_PASSWORD
              value: password
            - name: MYSQL_USER
              value: newuser
          image: mysql:8.0
          name: db
          ports:
            - containerPort: 3306
          resources:
            requests:
              memory: "128Mi"
              cpu: "500m"
            limits:
              memory: "500Mi"
              cpu: "1500m"
