k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    appkey: token-info-db
  name: token-info-db
spec:
  ports:
    - name: "mysql"
      port: 3306
  selector:
    appkey: token-info-db
