k8s/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    appkey: token-info-web
  name: token-info-web
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 9000
  selector:
    appkey: token-info-web
