k8s/istio.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: token-info
  namespace: token-info-page
spec:
  selector:
    app: istio-fetchpubig
    istio: ingressgateway
  servers:
  - hosts:
    - token-info.sandbox.fetch-ai.com
    - token-information.fetch.ai
    port:
      name: http
      number: 80
      protocol: HTTP
    tls:
      httpsRedirect: true
  - hosts:
    - token-info.sandbox.fetch-ai.com
    - token-information.fetch.ai
    port:
      name: https
      number: 443
      protocol: HTTPS
    tls:
      credentialName: wildcard-sandbox
      mode: SIMPLE
      privateKey: sds
      serverCertificate: sds
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: token-info
  namespace: token-info-page
spec:
  gateways:
  - token-info
  hosts:
  - token-info.sandbox.fetch-ai.com
  - token-information.fetch.ai
  http:
  - route:
    - destination:
        host: token-info-frontend
        port:
          number: 80
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: token-info-fetch-ai-com
  namespace: token-info-page
spec:
  host: token-info.sandbox.fetch-ai.com
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
    tls:
      mode: DISABLE
---
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: token-info-fetch-ai
  namespace: token-info-page
spec:
  host: token-information.fetch.ai
  trafficPolicy:
    loadBalancer:
      simple: LEAST_CONN
    tls:
      mode: DISABLE
